[gd_scene load_steps=12 format=3 uid="uid://dn78e74w0kavy"]

[ext_resource type="Theme" uid="uid://ctwjcw8ju5qb" path="res://themes/theme.tres" id="1_00dw5"]
[ext_resource type="Script" uid="uid://btaqnfxxirmpw" path="res://scripts/overlay.gd" id="1_v52i7"]
[ext_resource type="Script" uid="uid://enn7ppt42a3e" path="res://scripts/QueueSize.gd" id="2_dt45c"]
[ext_resource type="Script" uid="uid://3vytehl32qgj" path="res://scripts/QueueSizeContainer.gd" id="3_wejym"]
[ext_resource type="Script" uid="uid://j2uexoiv36lq" path="res://addons/HTTPManager/classes/HTTPManager.gd" id="4_cy1bk"]
[ext_resource type="Theme" uid="uid://dp1br5li0gvy8" path="res://themes/messages.tres" id="4_ubex6"]
[ext_resource type="Script" uid="uid://cqq50iapno3dr" path="res://scripts/QuestionPanel.gd" id="6_oxpp8"]
[ext_resource type="PackedScene" uid="uid://cbeu4b6kfbhq" path="res://scenes/main_menu.tscn" id="7_qmol3"]
[ext_resource type="Script" uid="uid://b7a4s7gv0jdr5" path="res://scripts/WebsocketServer.gd" id="10_vnfb5"]
[ext_resource type="Script" uid="uid://cp4sq4h1ovdwt" path="res://scenes/scroll.gd" id="12_uqs1p"]
[ext_resource type="PackedScene" uid="uid://burgngsb5ep1w" path="res://scenes/countdown_timer.tscn" id="15_8vdif"]

[node name="Overlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_00dw5")
script = ExtResource("1_v52i7")

[node name="CountdownTimer" parent="." instance=ExtResource("15_8vdif")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="UpdateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[node name="QueueSizeContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 184.0
grow_vertical = 0
pivot_offset = Vector2(0, 32)
mouse_default_cursor_shape = 13
theme = ExtResource("4_ubex6")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("3_wejym")

[node name="QueueSize" type="Label" parent="QueueSizeContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 13
theme_override_font_sizes/font_size = 40
text = "Queue: 0"
vertical_alignment = 2
script = ExtResource("2_dt45c")

[node name="MainMenu" parent="." instance=ExtResource("7_qmol3")]
unique_name_in_owner = true
layout_mode = 1

[node name="Message" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="HTTPManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_cy1bk")

[node name="CenterCross" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
points = PackedVector2Array(640, -8, 640, 736, -16, 736, -16, 360, 1296, 360)
width = 1.0
default_color = Color(0.2, 0.847059, 0, 0.513726)

[node name="QuestionPanel" type="Panel" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = 402.0
offset_right = 298.0
offset_bottom = 461.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 6
theme = ExtResource("4_ubex6")
script = ExtResource("6_oxpp8")

[node name="scroll" type="ScrollContainer" parent="QuestionPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("12_uqs1p")

[node name="MarginContainer" type="MarginContainer" parent="QuestionPanel/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="QuestionMessage" type="Label" parent="QuestionPanel/scroll/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
mouse_default_cursor_shape = 6
text = "Test Text Message"
vertical_alignment = 2
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="OffscreenTarget" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(344, 790)

[node name="WebsocketServer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_vnfb5")

[connection signal="question" from="." to="." method="_on_websocket_server_question"]
[connection signal="timer" from="." to="." method="_on_websocket_server_timer"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_timer_timeout"]
[connection signal="gui_input" from="QueueSizeContainer" to="QueueSizeContainer" method="_on_gui_input"]
[connection signal="gui_input" from="QueueSizeContainer/QueueSize" to="QueueSizeContainer/QueueSize" method="_on_gui_input"]
[connection signal="settings_updated" from="MainMenu" to="CountdownTimer" method="load_settings"]
[connection signal="timer_volume" from="MainMenu" to="CountdownTimer" method="_on_main_menu_timer_volume"]
[connection signal="gui_input" from="QuestionPanel" to="QuestionPanel" method="_on_gui_input"]
[connection signal="panel_hidden" from="QuestionPanel" to="." method="_on_question_panel_hidden"]
[connection signal="client_connected" from="WebsocketServer" to="." method="_on_websocket_server_client_connected"]
[connection signal="client_disconnected" from="WebsocketServer" to="." method="_on_websocket_server_client_disconnected"]
[connection signal="message_received" from="WebsocketServer" to="." method="_on_websocket_server_message_received"]
